fixed parameter visibility.

--- a/src/DebugBar/Resources/widgets.css
+++ b/src/DebugBar/Resources/widgets.css
@@ -230,7 +230,6 @@ div.phpdebugbar-widgets-sqlqueries span.phpdebugbar-widgets-stmt-id:before {
   content: "\f08d";
 }
 div.phpdebugbar-widgets-sqlqueries table.phpdebugbar-widgets-params {
-  display: none;
   width: 70%;
   margin: 10px;
   border: 1px solid #ddd;
